--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "lucide-react": "^0.517.0",
+    "prismjs": "^1.30.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "6.23.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "4.1.10"
   },
@@ -29,6 +32,7 @@
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
