add: prismjs types

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/prismjs": "^1.26.5",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "lucide-react": "^0.517.0",
