--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@types/prismjs": "^1.26.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "lucide-react": "^0.517.0",
@@ -25,6 +26,7 @@
     "react-dom": "18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "6.23.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "4.1.10"
