--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.517.0",
     "prismjs": "^1.30.0",
     "react": "18.3.1",
